# agent-baselines

./: .gitignore  Makefile  README.md  dvc.yaml  pyproject.toml  setup.cfg
.github/workflows/: ci-lint.yml  ci-test.yml
agent_baselines/solvers/: __init__.py  lit_tables.py  youcom.py
agent_baselines/solvers/arxivdigestables/: asta_table_agent.py
agent_baselines/solvers/asta/v0/: asta.py
agent_baselines/solvers/code_agent/: README.md  agent.py  code_agent.py  environment.py
agent_baselines/solvers/datavoyager/: agent.py
agent_baselines/solvers/datavoyager/dv_core/: agent.py  inspect_utils.py  models.py  patched.py
agent_baselines/solvers/futurehouse/: futurehouse_solver.py
agent_baselines/solvers/react/: basic_agent.py
agent_baselines/solvers/search/: paper_finder.py  youcom_search.py
agent_baselines/solvers/smolagents/: README.md  agent.py  sandbox_wrapper.py
agent_baselines/solvers/sqa/: format_solver.py  formatted_fhouse.py  formatted_llm.py  formatted_perplexity.py  formatted_youcom.py  openai_json_output.py  perplexity_base.py  perplexity_json_output.py  run_storm.py  sqa.py  sqa_subprocess.py  storm_solver.py
agent_baselines/solvers/sqa/debug/: cached_solver.py
agent_baselines/solvers/sqa/elicit/: elicit_to_hf_dataset.py  memorized_solver.py
agent_baselines/solvers/sqa/general_memorized/: memorized_solver.py  push_ds_to_hf.py
agent_baselines/solvers/sqa/openscholar/: convert_cache_to_sqa.py  memorized_solver.py  query_openscholar.py
agent_baselines/solvers/sqa/scispace/: scispace.py  scispace_to_hf_dataset.py
astabench/evals/e2e_discovery/: task.py
astabench/solvers/react/: basic_agent.py
astabench/solvers/smolagents/: agent.py
astabench/tools/: paper_finder_ai2i.py
astabench/util/: __init__.py
docker/: Dockerfile  bashrc
solvers/arxivdigestables/: README.md  demo.sh  env
solvers/asta-v0/: README.md  demo.sh  env  setup.sh
solvers/datavoyager/: demo.sh
solvers/e2e_discovery/: README.md  demo.sh  setup.sh
solvers/futurehouse/: demo.sh  env
solvers/paper_finder/: README.md  env
solvers/react/: README.md  demo.sh  env
solvers/smolagents/: README.md  demo.sh
solvers/sqa/: demo.sh  setup.sh
solvers/storm/: demo.sh  env
solvers/super/: demo.sh
tests/: test_basic_mockllm.py
tests/solvers/: test_asta_router.py  test_code_agent.py  test_paper_finder.py  test_sandbox_tools.py  test_state_util.py
