[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent_baselines"
version = "0.1.1"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "astabench==0.3.1",
]

[project.optional-dependencies]
dev = [
    "black==24.2.0",
    "isort",
    "autoflake",
    "pytest",
    "pytest-asyncio",
    "flake8==7.2.0",
    "flake8-pyproject==1.2.3",
    "mypy==1.15",
    "pandas-stubs",
    "httpx-sse>=0.4.2",
]
azure = [
    "azure-ai-inference"
]
sqa = [
    "ai2-scholar-qa==0.7.0",
]
smolagents = [
    "smolagents==1.17.0",
]
datavoyager = [
    "autogen-agentchat==0.6.4",
    "autogen-ext[openai, diskcache, azure, anthropic]==0.6.4",
    "ipython~=8.18",
    "matplotlib==3.10.0",
    "nest_asyncio==1.6.0",
    "pyyaml==6.0.2",
    "termcolor==2.5.0",
]
futurehouse = [
    "futurehouse-client==0.3.19",
]
storm = [
      "knowledge-storm @ git+https://github.com/gituser768/storm.git@dh-fix-youcom",
]
super = [
      "websocket-client~=1.7.0",
      "nbconvert~=7.16.1",
      "ipython~=8.18.1",
]

[project.scripts]
inspect = "inspect_ai._cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "agent_baselines",
    "agent_baselines.*",
]

[tool.uv]
conflicts = [
    [{extra = "sqa"}, {extra = "storm"}],
    [{extra = "sqa"}, {extra = "futurehouse"}],
    [{extra = "storm"}, {extra = "smolagents"}],
]
override-dependencies = [
    # sqa pins openai to a lower version than inspect requires
    "openai==1.78.0",

    # STORM pretends to require a lower version, but doesn't actually need it:
    # https://github.com/allenai/asta-bench/issues/31#issuecomment-3045978008
    "datasets~=3.2.0",
]

[tool.flake8]
select = [
    # F category for logical errors
    "F",

    # Serious "E" errors
    "E721", # `type(x) == <t>` instead of `isinstance(x, <t>)`
    "E901", "E902", "E999" # syntax errors
]

ignore = [
    "F401",  # module imported but unused
    "F541",  # f-string is missing placeholders
]

[tool.setuptools.package-data]
"agent_baselines" = ["solvers/datavoyager/dv_core/config/*.yaml", "solvers/code_agent/*.yaml"]

[tool.uv.sources]
knowledge-storm = { git = "https://github.com/gituser768/storm", branch = "dh-fix-youcom" }

[tool.pytest.ini_options]
testpaths = ["tests"]
# give each async test its own loop
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
# default to skipping expensive tests
addopts = "-m \"not expensive\""
markers = [
  "expensive: mark test as expensive (skipped by default)"
]
